# ledger-shopify

./: .dockerignore  .gitignore  Dockerfile  README.md  TrueROAS_structure.md  app.py  deploy_local.py  docker-compose.yml  engine.py  main.py  prompt.md  pyproject.toml  requirements.txt  setup.sh  setup_project.py  test_run.py  trueroas-production.yaml  verify_imports.py
config/: settings.yaml
data/: ledger.jsonl
docker/: Dockerfile
src/: ledger.py  meta_client.py  wilson.py
src/trueroas/: __init__.py  config.py  fb_client.py  flows.py  schemas.py  shopify_client.py
src/trueroas/api/: main.py
src/trueroas/api/routes/: __init__.py  auth.py  autonomous.py  metrics.py
src/trueroas/audit/: rules.yaml  scorer.py
src/trueroas/core/: cohort.py  decision.py  export.py  fatigue.py  ledger.py  metrics.py  mmm_lite.py  reasoning.py  simulation.py
src/trueroas/ingestion/: shopify_client.py
src/trueroas/lab/: experiment.py
src/trueroas/math/: metrics.py
src/trueroas/pipeline/: capi_ingest.py  duck.py  metrics.py  pipeline.py  stage0_contract.py  stage1_technical.py  stage2_invalid.py  stage3_dedup.py  stage4_attribution.py  stage4_reconciliation.py  stage5_overlap.py  stage6_outlier.py  stage7_incrementality.py
src/trueroas/warehouse/: __init__.py  duck.py  warehouse.py
tests/: conftest.py  test_autonomous_guardrails.py  test_metrics.py  test_pipeline.py  test_truth_validity.py  test_warehouse.py
