[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trueroas"
version = "0.1.0"
description = "High-performance marketing truth engine"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.7.0",
    "pydantic-settings",
    "prefect>=2.14.0",
    "python-dotenv",
    "requests",
    "pyyaml",
    "pytest",
    "structlog",
    "numpy",
    "pyarrow"
]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src"]